# 3DMMEx

./: .git-blame-ignore-revs  .gitattributes  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml  clang-format-check.yml
bren/: bwld.cpp  stderr.c  tmap.cpp  zbmp.cpp
bren/inc/: bren.h  bwld.h  camera.h  tmap.h  zbmp.h
cmake/: FetchGoogleTest.cmake  FetchSDL2.cmake  FindBRender.cmake  GenerateChunkTags.cmake  TargetChompSources.cmake
elib/brender/inc/: fwproto.h
inc/: actor.h  ape.h  bkgd.h  body.h  browser.h  esl.h  kidgs.chh  kidgsdef.h  modl.h  movie.h  msnd.h  mtrl.h  popup.h  portf.h  scene.h  scnsort.h  sharutil.chh  sitobren.h  soc.h  socdef.h  socutil.h  splot.h  srec.h  stdioscb.h  studio.h  tagl.h  tagman.h  tatr.h  tbox.h  tdf.h  tdt.h  tgob.h  tmpl.h  utest.h  utestres.h  version.h.in
kauai/: CMakeLists.txt
kauai/src/: accelerator.cpp  accelerator.h  appassert.cpp  appb.cpp  appb.h  appbmac.cpp  appbsdl.cpp  appbwin.cpp  appmainsdl.cpp  appmainwin.cpp  base.cpp  base.h  chcm.cpp  chcm.h  chse.cpp  chse.h  chtrans.h  chunk.cpp  chunk.h  clip.cpp  clip.h  clok.cpp  clok.h  cmd.cpp  cmd.h  codec.cpp  codec.h  codkauai.cpp  crf.cpp  crf.h  csapi.h  ctl.cpp  ctl.h  cursor.cpp  cursor.h  cursorsdl.cpp  debug.h  dlg.cpp  dlg.h  dlgmac.cpp  (+126 more)
kauai/test/: assert.cpp  compiler_test.cpp  compression_test.cpp  gui_test.cpp  kauai_test.cpp  resources.cpp  resources.h  string_test.cpp
kauai/test/khello/: khello.cpp  khello.rc  resource.h
kauai/test/res/: search_path.cht
kauai/tools/: chdoc.cpp  chdoc.h  ched.cpp  ched.h  chelp.cpp  chelp.h  chelpdmp.cpp  chelpexp.cpp  chgrp.cpp  chhex.cpp  chmbmp.cpp  chmerge.cpp  chomp.cpp  chomp.h  chpic.cpp  chtop.cpp  chtxt.cpp  kpack.cpp  mkmbmp.cpp
src/: CMakeLists.txt
src/building/: backstag.cht  bkshdw.seq  bkstgbag.seq  bldghd.cht  iddoor.seq  imagin.cht  inspirat.cht  lobby.cht  login.cht  melproj1.seq  music.cht  mzbkstag.seq  mzbkstg.seq  mzinsp.seq  mzlobby.seq  mzroller.seq  mzstudio.seq  mzthea.seq  mzthea4.seq  palette.cht  prdoor.seq  prjmon1.seq  prjmon2.seq  projects.cht  snackbar.cht  snackbar.seq  stdoor.seq  street.cht  studiobg.cht  studiobx.seq  studiotv.seq  theatre.cht  ticket.cht  ticket.seq  ticket1.seq  waiting.cht
src/engine/: actor.cpp  actredit.cpp  actrsave.cpp  actrsnd.cpp  bkgd.cpp  body.cpp  modl.cpp  movie.cpp  msnd.cpp  mtrl.cpp  scene.cpp  srec.cpp  srecstub.cpp  srecwin.cpp  tagl.cpp  tagman.cpp  tbox.cpp  tdf.cpp  tdt.cpp  tmpl.cpp
src/help/: help.cht
src/helpaud/: wcbasics.cht  wcgdelgo.cht  wchowto.cht  wcproj.cht  wctoolhp.cht  wctooltp.cht
src/shared/: biopage.cht  cursors.cht  map.cht  portbmp.cht  sharecd.cht  sharhelp.cht  util.cht
src/studio/: ape.cpp  browser.cht  browser.cpp  configstub.cpp  configwin.cpp  cursors.cht  dlgsdl.cpp  easels.cht  esl.cpp  gadget.cht  helpbook.cht  helpctrl.cht  helpres.cht  mminstal.cpp  mminstal.h  popdn.cht  popup.cpp  popups.cht  portf.cpp  portfstub.cpp  portfwin.cpp  scnsort.cpp  sectools.cht  splot.cpp  stdiobrw.cpp  stdioscb.cht  stdioscb.cpp  stdiosnd.cht  studio.cht  studio.cpp  tatr.cpp  tgob.cpp  utest.cht  utest.cpp  utest.rc  utest.rc2  utestgst.cht  utestscb.cpp
tools/: mktmap.cpp  pbmtobmp.cpp  sitobren.cpp  tdfmake.cpp
